# parastro

./: AddAdditionalAttribute.xml  AstroVizFilterMenu.xml  CMakeLists.txt  CMakeWithRamses.txt  CenterOfMassFilter.xml  DelaunaySmoothFilter.xml  FriendsOfFriendsHaloFinder.xml  GadgetIIReaderGUI.xml  GadgetIIReaderSM.xml  GraficReader.qrc  GraficReaderGUI.xml  GraficReaderSM.xml  MassFunctionFilter.xml  MomentsOfInertiaFilter.xml  MostBoundFilter.xml  NSmoothFilterSM.xml  ParaViz_src.tmproj  PointDisplay.qrc  PointDisplayGUI.xml  PointDisplaySM.xml  PolyDataHelpers.cxx  PolyDataHelpers.h  ProfileFilter.xml  RAMSES_amr_data.hh  RAMSES_compound_data.hh  RAMSES_hydro_data.hh  RAMSES_info.hh  RAMSES_mpi.hh  RAMSES_particle_data.hh  README  README.md  RamsesReader.qrc  RamsesReaderGUI.xml  RamsesReaderSM.xml  SQLiteReader.qrc  SQLiteReader2.qrc  SQLiteReader2GUI.xml  SQLiteReader2SM.xml  SQLiteReaderGUI.xml  SQLiteReaderSM.xml  (+78 more)
AstroVizHelpersLib/: AstroVizHelpers.cxx  AstroVizHelpers.h
ColorMaps/: astro_tipsy_colormap_halfopacity.xml  astro_tipsy_colormap_percentopacity.xml  grey_tipsy_colormap.xml  grey_tipsy_colormap_halfopacity.xml  grey_tipsy_colormap_percentopacity.xml  hot2cold_tipsy_colormap.xml  hot2cold_tipsy_colormap_halfopacity.xml  hot2cold_tipsy_colormap_percentopacity.xml  wrbb_tipsy_colormap_halfopacity.xml  wrbb_tipsy_colormap_percentopacity.xml
Development/: GadgetIIReader.qrc  GadgetIIReaderSM.xml  MostBoundFilter.xml  SourceToolbarActions.cxx  SourceToolbarActions_Menu.cxx  vtkAstroVizHelpers.cxx  vtkAstroVizHelpers.h  vtkGadgetIIReader.cxx  vtkGadgetIIReader.h  vtkMassFunctionFilter.h  vtkMostBoundFilter.h
ExamplePython/: AddAdditionalAttribute.py  AstroVizPython.py  ColorBar.py  ConnectToServer.py  DeletingObjectInPipeline.py  FoF.py  Glyph.py  Help.py  LoadAstroVizPlugin.py  NeighborSmooth.py  OpenTipsyBinary.py  PlotData.py  PrincipleMomentsOfInertia.py  Profile.py  VirialRadius.py
Examples/: TxtReader.qrc  TxtReaderSM.xml  vtkShrinkFilter.cxx
ExternalCode/: pkdgrav_master.c  pkdgrav_master.h  read_snapshot.c
ExternalCode/CosmoFilters/: HaloClassPanel.cxx  HaloClassPanel.h  vtkCosmoCorrelater.cxx  vtkCosmoCorrelater.h  vtkCosmoDistillerSTD.cxx  vtkCosmoDistillerSTD.h  vtkCosmoDistillerVTU.cxx  vtkCosmoDistillerVTU.h  vtkCosmoHaloClassFilter.cxx  vtkCosmoHaloClassFilter.h  vtkCosmoHaloCountFilter.cxx  vtkCosmoHaloCountFilter.h  vtkCosmoHaloFinder.cxx  vtkCosmoHaloFinder.h  vtkCosmoHaloSorter.cxx  vtkCosmoHaloSorter.h
ExternalCode/CosmoFilters/CVS/: Entries  Repository  Root
ExternalCode/Joachim_virad/: profit.c  simpleprof.c
ExternalCode/Tipsy-2.2.3/: Makefile  acc_load.c  arguments.c  config.status  defs.h  main.c  main.h  view_star.c  vista.c
ExternalCode/Tipsy-2.2.3/readline/: Makefile  config.h  config.status
ExternalCode/fof-1.1/: fof
Testing/: CenterOfMassFilterCxxTests.cxx  b1.00300.d0-1000.ascii  b1.00300.d0-1000.den  b1.00300.d0-1000.plussmooth.csv  b1.00300.d0-1000.std  b1.00300.d0-1000.testmark.mark  b1.00300.d0-1000.testmark2.mark  testCOM.py  testSmoothAndTipsyRead.py
Testing/ColorMaps/: astro_tipsy_colormap.xml  create_own_colormap.xml  wrbb_tipsy_colormap.xml
Testing/RamsesTest/: test_convert.sh  test_davide.sh
Testing/RamsesTest/Hydro/output_00036/: amr_00036.out00001  amr_00036.out00002  amr_00036.out00003  amr_00036.out00004  cooling_00036.out  grav_00036.out00002  info_00036.txt  part_00036.out00001  part_00036.out00002  part_00036.out00003  part_00036.out00004
Testing/RamsesTest/NoPart/: output00036.csv  partID_00036
Testing/RamsesTest/NoPart/output_00036/: grav_00036.out00001  grav_00036.out00003  grav_00036.out00004
Testing/RamsesTest/Nohydro/output_00036/: amr_00004.out00001  amr_00004.out00002  amr_00004.out00003  amr_00004.out00004  grav_00004.out00001  grav_00004.out00002  grav_00004.out00003  grav_00004.out00004  info_00004.txt  part_00004.out00001  part_00004.out00002  part_00004.out00003  part_00004.out00004  ramses2tipsy.std
Testing/examples/: RenderingCxxTests.cxx
astrovizhelpers/: DataSetHelpers.cxx  DataSetHelpers.h  PolyDataHelpers.cxx  PolyDataHelpers.h  ProfileHelpers.cxx  ProfileHelpers.h
fio/: a.out  fio.c  fio.h  grafic2csv  grafic2csv.c  make.sh  make.sh~  make_linux.sh  romberg.h  test_lib  test_lib.c
sqlitelib/: sqlite3.c
tipsylib/: binner.cpp  ftipsy.cpp  grid.cpp  regex.hpp  romberg.c  romberg.h  standard.cpp  tdiff.cpp  tdump.cpp  tipsypos.h  zstream.cpp
